--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "author": "Benjamin Kroeger <benjamin.kroeger@gmail.com>",
   "license": "MIT",
+  "keywords": [ "node-red" ],
   "dependencies": {
     "body-parser": "^1.16.1",
     "express": "^4.14.1",
