--- a/package.json
+++ b/package.json
@@ -2,7 +2,9 @@
   "name": "node-red-contrib-domino-subscriber",
   "version": "0.0.3",
   "description": "IBM Connect 2017 Hackathon Domino Subscriber",
-  "main": "lib/index.js",
+  "files": [
+    "lib/"
+  ],
   "scripts": {
     "node-red": "node-red --settings ./settings.js"
   },
